--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@prisma/client": "6.17.1",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
+    "class-transform": "^0.7.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
